# Coursework5

./: .gitignore  README.md  database.ini  main.py  pyproject.toml
src/: config.py  constants.py  dbmanager.py  hh_parser.py  utils.py
