[tool.poetry]
name = "CW5"
version = "0.1.0"
description = ""
authors = ["Nikita-Musk <nik52119q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
